--- a/jobs.html
+++ b/jobs.html
@@ -16,7 +16,7 @@
       <nav>
         <h1>Samolo</h1>
         <ul>
-          <a href="home.html">
+          <a href="index.html">
             <li>Home</li>
           </a>
           
@@ -37,7 +37,7 @@
       <section id="hero">
         <div class="hero_content">
           <h1>Jobs !</h1>
-          <h4>Apply Everywhere</h4>
+          <h4>Apply Everywhere </h4>
 
         </div><!--
         <div class="hero_image">
