--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </p>
               <div class="status">
                 <p>8 Feb 2022</p>
-                <a href="News.html"
+                <a href="news.html"
                   ><button class="read-btn">Read More</button></a
                 >
               </div>
